# pytorch_hmm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: 01_hmm_theory.md  02_basic_usage.md  03_advanced_features.md  04_real_world_applications.md  05_performance_optimization.md  06_examples.md  PROJECT_ANALYSIS.md  README.md  hmm_tutorial.md
docs/examples/: basic_examples.md
docs/troubleshooting/: faq.md
docs/tutorials/: quickstart.md
examples/: advanced_features_demo.py  basic_tutorial.py  benchmark.py  v0_2_0_demo.py
pytorch_hmm/: __init__.py  hmm.py  hmm_layer.py  hsmm.py  metrics.py  mixture_gaussian.py  neural.py  optimizations.py  semi_markov.py  streaming.py  utils.py
pytorch_hmm/alignment/: __init__.py  ctc.py  dtw.py
tests/: test_ctc.py  test_dtw.py  test_hmm.py  test_hsmm.py  test_integration.py  test_mixture_gaussian.py  test_optimizations.py  test_semi_markov.py  test_streaming.py  test_utils.py
